--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,17 +5,6 @@ on:
     types: [created]
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: yarn
-      - run: yarn eslint
-
   publish:
     name: Publish
     runs-on: ubuntu-latest
@@ -25,13 +14,15 @@ jobs:
         with:
           node-version: 12
       - run: yarn
+      - run: yarn eslint
       - run: yarn build
       - run: yarn commit:dist
       - uses: meeDamian/github-release@2.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           allow_override: true
-          files: dist/
+          files: dist/playkit-blinking-watermark.js dist/playkit-blinking-watermark.js.map
+          gzip: false
 #       - run: yarn publish
 #        env:
 #          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
