PSVAMB-36643 convert plugin to typescript

--- a/package.json
+++ b/package.json
@@ -2,38 +2,58 @@
   "name": "@playkit-js/playkit-js-blinking-watermark",
   "version": "1.0.0",
   "main": "dist/playkit-blinking-watermark.js",
+  "types": "types.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development",
+    "dev": "npm run prepare:demo -- dev && npm run build:dev && webpack serve --open --mode development",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production",
     "watch": "webpack --progress --colors --watch --mode development",
-    "eslint": "eslint . --color",
-    "precommit": "lint-staged",
+    "lint:check": "eslint src --ext .ts,.tsx --color",
+    "lint:fix": "npm run lint:check -- --fix",
     "prettier:fix": "prettier --write .",
-    "commit:dist": "git add --force --all dist && (git commit -m \"chore: update dist\" || exit 0)"
+    "prepare:demo": "sh scripts/prepare-demo.sh",
+    "docs:generate": "typedoc",
+    "types:generate": "tsc src/index.ts types/global.d.ts --declaration --emitDeclarationOnly --outFile types/modules.ts --jsx react --jsxFactory h --stripInternal true --target ESNext --moduleResolution node",
+    "release": "standard-version",
+    "pushTaggedRelease": "git push --follow-tags --no-verify origin main",
+    "commit:dist": "git add --force --all dist demo/index.html && (git commit -m 'chore: update dist' || exit 0)"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-react-jsx": "^7.12.12",
-    "@babel/preset-env": "^7.12.11",
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.18.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#v1.0.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^7.32.0",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.0",
+    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#master",
     "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.17.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "prettier": "^2.6.2",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
+    "standard-version": "^9.5.0",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^28.0.2",
+    "ts-loader": "^9.2.8",
+    "typedoc": "^0.22.17",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "peerDependencies": {
-    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#v1.0.0"
+    "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#master"
   },
   "lint-staged": {
     "*.{js,jsx}": [
