--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,6 @@
 {
-  "printWidth": 150,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": true,
   "singleQuote": true,
+  "printWidth": 130,
   "trailingComma": "none",
-  "bracketSpacing": false,
-  "jsxBracketSameLine": true,
-  "arrowParens": "avoid",
-  "proseWrap": "preserve",
-  "endOfLine": "auto"
+  "arrowParens": "always"
 }
