--- a/package.json
+++ b/package.json
@@ -8,49 +8,60 @@
   ],
   "scripts": {
     "dev": "npm run prepare:demo -- dev && npm run build:dev && webpack serve --open --mode development",
+    "watch": "webpack --progress --colors --watch --mode development",
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
-    "watch": "webpack --progress --colors --watch --mode development",
+    "test": "karma start --color --mode development",
+    "test:debug": "DEBUG_UNIT_TESTS=1 karma start karma.conf.js --auto-watch --no-single-run --browsers Chrome",
+    "test:watch": "karma start karma.conf.js --auto-watch --no-single-run",
+    "types:check": "tsc src/index.ts src/types/global.d.ts --jsx react --jsxFactory h --noEmit --target ESNext --moduleResolution node --experimentalDecorators",
+    "types:ganarate": "tsc src/index.ts src/types/global.d.ts --declaration --emitDeclarationOnly --outFile types/modules.ts --jsx react --jsxFactory h --stripInternal true --target ESNext --moduleResolution node --experimentalDecorators",
+    "docs:ganarate": "typedoc",
     "lint:check": "eslint src --ext .ts,.tsx --color",
     "lint:fix": "npm run lint:check -- --fix",
     "prettier:fix": "prettier --write .",
-    "prepare:demo": "sh scripts/prepare-demo.sh",
-    "docs:generate": "typedoc",
-    "types:generate": "tsc src/index.ts types/global.d.ts --declaration --emitDeclarationOnly --outFile types/modules.ts --jsx react --jsxFactory h --stripInternal true --target ESNext --moduleResolution node",
     "release": "standard-version",
-    "pushTaggedRelease": "git push --follow-tags --no-verify origin main",
-    "commit:dist": "git add --force --all dist demo/index.html && (git commit -m 'chore: update dist' || exit 0)"
+    "pushTaggedRelease": "git push --follow-tags --no-verify origin master",
+    "prepare:demo": "sh scripts/prepare-demo.sh",
+    "commit:dist": "git add --force --all dist demo/index.html && (git commit -m 'chore: update dist' || exit 0)",
+    "pre:commit": "npm run types:check && npm run lint:check && npm run types:ganarate && npm run docs:ganarate"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@types/jest": "^27.5.0",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.4",
     "cross-env": "^7.0.3",
+    "chai": "^4.3.6",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^28.1.0",
     "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#master",
-    "lint-staged": "^10.5.3",
+    "karma": "^6.4.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-webpack": "^5.0.0",
+    "mocha": "^10.0.0",
     "prettier": "^2.6.2",
+    "promise-polyfill": "^8.2.3",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "standard-version": "^9.5.0",
     "style-loader": "^3.3.1",
-    "ts-jest": "^28.0.2",
     "ts-loader": "^9.2.8",
-    "typedoc": "^0.22.17",
-    "typescript": "^4.6.4",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "typescript": "^4.8.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.1"
   },
   "peerDependencies": {
     "kaltura-player-js": "https://github.com/kaltura/kaltura-player-js.git#master"
