--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "npm run prepare:demo -- dev && npm run build:dev && webpack serve --open --mode development",
     "watch": "webpack --progress --colors --watch --mode development",
+    "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "test": "karma start --color --mode development",
